_sass/_main.scss
*,
:after,
:before {
	box-sizing: border-box;
	background-color: inherit;
	color: inherit;
	margin: 0;
	// padding: 0;
}

html {
	font-size: 13px;
}

#theme-toggle {
	opacity: 0.65;
	position: relative;
	border-radius: 5px;
	height: 25px;
	display: flex;
	-webkit-box-align: center;
	align-items: center;
	-webkit-box-pack: center;
	justify-content: center;
	transition: opacity 0.3s ease 0s;
	border: none;
	outline: none;
	background: none;
	cursor: pointer;
	padding: 0px;
	appearance: none;
	transform: scale(0.8);
}

html,
html[data-theme="light"] {
	--very-light-text-color: rgb(222, 222, 222);
	--light-text-color: rgb(196, 187, 240);
	--medium-text-color: #555;
	--main-text-color: #333;
	--dark-text-color: #393e46;
	--link-color: rgb(94, 6, 105);
	--code-bg-color: rgb(240, 240, 240);

	--page-bg: rgb(255, 255, 255);
	background-color: rgb(255, 255, 255);

	

	#theme-toggle div {
		position: relative;
		width: 24px;
		height: 24px;
		border-radius: 50%;
		border: none;
		background-color: var(--theme-ui-colors-transparent, transparent);
		transform: scale(1);
		transition: all 0.45s ease 0s;
		overflow: hidden;
		box-shadow: inset 8px -8px 0px 0px var(--theme-ui-colors-toggleIcon, #2d3748);

		&::before {
			content: "";
			position: absolute;
			right: -9px;
			top: -9px;
			height: 24px;
			width: 24px;
			border: none;
			border-radius: 50%;
			transform: translate(0px, 0px);
			opacity: 1;
			transition: transform 0.45s ease 0s;
		}

		&::after {
			content: "";
			width: 8px;
			height: 8px;
			border-radius: 50%;
			margin: -4px 0px 0px -4px;
			position: absolute;
			top: 50%;
			left: 50%;
			box-shadow: 0 -23px 0 var(--theme-ui-colors-toggleIcon, #2d3748),
				0 23px 0 var(--theme-ui-colors-toggleIcon, #2d3748), 23px 0 0 var(--theme-ui-colors-toggleIcon, #2d3748),
				-23px 0 0 var(--theme-ui-colors-toggleIcon, #2d3748),
				15px 15px 0 var(--theme-ui-colors-toggleIcon, #2d3748),
				-15px 15px 0 var(--theme-ui-colors-toggleIcon, #2d3748),
				15px -15px 0 var(--theme-ui-colors-toggleIcon, #2d3748),
				-15px -15px 0 var(--theme-ui-colors-toggleIcon, #2d3748);
			transform: scale(0);
			transition: all 0.35s ease 0s;
		}
	}
}

html[data-theme="dark"] .site-quote {
  color: #fff;
}

html:not([data-theme="dark"]) .site-quote.visible {
  opacity: 0.85;
}

html[data-theme="dark"] {
	--very-light-text-color: rgb(200,200,200);
	--light-text-color: #c4bbf0;
	--medium-text-color: #52057b;
	--main-text-color: rgb(244,244,244);
	--dark-text-color: rgb(36, 38, 42);
	--link-color: rgb(238, 102, 128);
	--code-bg-color: rgb(60, 60, 60);
	--page-bg: rgb(19, 20, 24);
	background-color: rgb(19, 20, 24);

	#theme-toggle div {
		position: relative;
		width: 24px;
		height: 24px;
		border-radius: 50%;
		border: 4px solid var(--theme-ui-colors-toggleIcon, #cbd5e0);
		background-color: var(--theme-ui-colors-toggleIcon, #cbd5e0);
		transform: scale(0.55);
		transition: all 0.45s ease 0s;
		overflow: visible;
		box-shadow: none;

		&::before {
			content: "";
			position: absolute;
			right: -9px;
			top: -9px;
			height: 24px;
			width: 24px;
			border: 2px solid var(--theme-ui-colors-toggleIcon, #cbd5e0);
			border-radius: 50%;
			transform: translate(14px, -14px);
			opacity: 0;
			transition: transform 0.45s ease 0s;
		}

		&::after {
			content: "";
			width: 8px;
			height: 8px;
			border-radius: 50%;
			margin: -4px 0px 0px -4px;
			position: absolute;
			top: 50%;
			left: 50%;
			box-shadow: 0 -23px 0 var(--theme-ui-colors-toggleIcon, #cbd5e0),
				0 23px 0 var(--theme-ui-colors-toggleIcon, #cbd5e0), 23px 0 0 var(--theme-ui-colors-toggleIcon, #cbd5e0),
				-23px 0 0 var(--theme-ui-colors-toggleIcon, #cbd5e0),
				15px 15px 0 var(--theme-ui-colors-toggleIcon, #cbd5e0),
				-15px 15px 0 var(--theme-ui-colors-toggleIcon, #cbd5e0),
				15px -15px 0 var(--theme-ui-colors-toggleIcon, #cbd5e0),
				-15px -15px 0 var(--theme-ui-colors-toggleIcon, #cbd5e0);
			transform: scale(1);
			transition: all 0.35s ease 0s;
		}
	}
}

body {
	font-family: "Fira Code", monospace;
	text-rendering: optimizeLegibility;
	line-height: 1.75;
	color: var(--main-text-color);
	background-color: transparent;
}

#cosmos {
	position: fixed;
	top: 0;
	left: 0;
	width: 100%;
	height: 100%;
	pointer-events: none;
	z-index: 0;
}

a {
	color: var(--link-color);
	text-decoration: none;
}

.post p {
	margin: 1rem 0;
}

.meta {
	margin: 1.4rem 0;

}

code,
pre {
	background: var(--code-bg-color);
	margin: 0 -27px;
	border-width: 1px;
}

code {
	margin: unset;
	padding: 0.1rem;
}

pre code {
	background-color: unset;
	color: unset;
}

pre {
  overflow-x: scroll;
	border-width: 5px;
	padding: 0.8rem;
	border-radius: 5px;
	border-style: none none none solid;
	border-color: var(--link-color);
}

img {
	max-width: 100%;
	display: block;
  	margin-left: auto;
  	margin-right: auto;
}

hr {
	background: var(--light-text-color);
	height: 1px;
	border: 0;
}

header {
	flex-basis: 10rem;
	flex-grow: 1;
	position: relative;
}

header a {
	text-decoration: none;
}

header li {
	margin-bottom: 0.2rem;
	text-align: right;
	margin-right: 2rem;
}

header a.active {
	font-weight: bold;
}

header,
section {
	padding: 1rem 0;
}

section {
	margin-top: 5.5rem;
}

blockquote {
	font-style: italic;
	border-left: 5px solid var(--dark-text-color);
	padding-left: 1rem;
}

h1 {
	color: var(--main-text-color);
	font-size: 1.4rem;
	font-weight: bold;
	margin-bottom: 1rem;
	margin-top: 1.5rem;
}

h2 {
	font-weight: bold;
	font-size: 1.3rem;
	margin-bottom: 1rem;
	margin-top: 1.5rem;
}

h3,
h4,
h5 {
	font-weight: bold;
	margin-bottom: 1rem;
	margin-top: 1.5rem;
}

section h1:first-child {
	margin-top: 0;
}

strong,
b {
	font-weight: bold;
}

.photos ul {
	list-style: none;
}

.photos li {
	margin-bottom: 1.5rem;
}

.photo picture,
.project picture {
	margin-bottom: 0.5rem;
}

.posts > h3 {
	font-weight: 500;
}

.posts ul,
header ul {
	list-style: none;
}

.posts li {
	align-items: center;
	display: flex;
	justify-content: space-between;
	margin-bottom: 0.5rem;
}
/* ... */

